Refs #570; Added overflow hidden for header to avoid overlapping of large file dimensions logos with the content

--- a/eggs/Naaya/Products/Naaya/www/style.css
+++ b/eggs/Naaya/Products/Naaya/www/style.css
@@ -52,6 +52,7 @@ hr {
 
 /* header */
 #header {
+    overflow: hidden;
 	padding: 0;
 	margin: 0;
 }
